--- a/css/Globe.css
+++ b/css/Globe.css
@@ -1,23 +1,23 @@
 /*Body ------------------------------------------------------------*/
-body{
+body {
     overflow: hidden;
 }
 /*-----------------------------------------------------------------*/
 
 /*The World -------------------------------------------------------*/
-#earth-section{
+#earth-section {
     position: absolute;
     justify-content: center;
     width: 100vw;
     height: 100vh;
 }
 
-#earth-section>*{
+#earth-section> * {
     position: absolute;
     justify-content: center;
 }
 
-#earth-div{
+#earth-div {
     position: relative;
     justify-content: center;
     z-index: 3; 
@@ -33,7 +33,7 @@ body{
     animation: earth 100s linear infinite;
 }
 
-#earth-div:hover{
+#earth-div:hover {
     transition-property: all;
     transition-duration: 1s;
     transition-timing-function: ease-in-out;
@@ -50,7 +50,7 @@ body{
 /*-----------------------------------------------------------------*/
 
 /*Moon ------------------------------------------------------------*/
-.moon img{
+.moon img {
     position: absolute;
     z-index: 3;
     width: 10%;
@@ -60,9 +60,15 @@ body{
 }
 
 @keyframes moonBob {
-    0% {top: 0;}
-    50%{ top: 1%;}
-    100% {top: 0;}  
+    0% {
+        top: 0;
+    }
+    50%{ 
+        top: 1%;
+    }
+    100% {
+        top: 0;
+    }  
 }
 /*-----------------------------------------------------------------*/
 
@@ -80,19 +86,29 @@ body{
 }
 
 @keyframes rocketMove {
-    0% {top: 30%; left: 60%; transform: rotate(30deg);}
-    20% {top: 29%; left: 65%;}
-    50% {top: 30%; left: 80%; }
-    100% {top: 10%; left: 100%;}
+    0% {
+        top: 30%; left: 60%; transform: rotate(30deg);
+    }
+    20% {
+        top: 29%; left: 65%;
+    }
+    50% {
+        top: 30%; left: 80%; 
+    }
+    100% {
+        top: 10%; left: 100%;
+    }
 }
 /*-----------------------------------------------------------------*/
 
 /*Spacemen --------------------------------------------------------*/
+#spacemen>*{
+    position: absolute;
+    z-index: 4;
+}
 
 #spaceman-1{
-    position: absolute;
-    z-index: 5;
-    width: 20vh;
+    width: 11vw;
     top: 50%;
     right: 5%;
     transform: rotate(20deg);
@@ -103,52 +119,91 @@ body{
 }
 
 @keyframes spaceman1Float {
-    0% {top: 50;}
-    50%{ top: 52%;  transform: rotate(-5deg);} 
-    100% {top: 50;}
+    0% { 
+        top: 50;
+    }
+    50% { 
+        top: 52%;  transform: rotate(-5deg);}
+
+    100% {
+        top: 50;
+    }
 }
 
 @keyframes spaceman1Spin{
-    0% {transform: rotate(45deg);}
-    50% {transform: rotate(180deg);}
-    100% {transform: rotate(380deg);}
+    0% {
+        transform: rotate(45deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(380deg);
+    }
+
 }
 
 
-#spaceman-2{
-    position: absolute;
-    z-index: 5;
-    width: 5vh;
+#spaceman-2 {
+    width: 2.5vw;
     top: 50%;
     right: 14%;
     transform: rotate(20deg);
     animation: spaceman2Float 4s linear infinite;
 }
 
-#spaceman-2:hover{
+#spaceman-2:hover {
     animation: spaceman2Spin 2s linear forwards;
 }
 
 @keyframes spaceman2Float {
-    100% {top: 50;}
-    50%{ top: 54%; transform: rotate(35deg);}
-    0% {top: 50;}
+    100% {
+        top: 50;}
+
+    50% { 
+        top: 54%; transform: rotate(35deg);
+    }
+    0% {
+        top: 50;
+    }
 }
 
-@keyframes spaceman2Spin{
+@keyframes spaceman2Spin {
     0% {transform: rotate(45deg);}
     50% {transform: rotate(180deg);}
     100% {transform: rotate(380deg);}
 }
 
+#its-all-lego {
+    z-index: 4;
+    width: 15vw;
+    top: 67%;
+    left: 75%;
+    opacity: 0;
+    transform: rotate(15deg);
+    animation: itsAllLegoPictureAnimation 3s linear infinite;
+}
+
+@keyframes itsAllLegoPictureAnimation {
+    0% {
+        top: 67%;
+    }    
+    50% {
+        top: 70%;
+    }    
+    100% {
+        top: 67%;
+    } 
+}
+
 /*---------------------------------------------------------------------*/
 
 /*Extraterrestrial ----------------------------------------------------*/
-#extraterrestrial-section>*{
+#extraterrestrial-section> * {
     position: absolute;
 }
 
-#lego-ufo{
+#lego-ufo {
     z-index: 4;
     width: 10vw;
     top: 40%;
@@ -159,7 +214,7 @@ body{
     
 }
 
-#lego-ufo:hover{
+#lego-ufo:hover {
     animation: ufoVisibility 1s linear forwards;
 }
 
@@ -169,22 +224,23 @@ body{
     100% {top: 40%;}
 }
 
-@keyframes ufoVisibility{
-    0% {opacity: 0.1;}
+@keyframes ufoVisibility {
+    0% {opacity: 0.1;} 
     50% {opacity: 0.5;}
     100% {opacity: 1;}
 }
 
-#lego-alien{
+#lego-alien {
     z-index: 4;
-    width: 5vh;
+    width: 3vw;
     top: 45%;
     left: 22%;
-    transform: rotate(5deg);
+    transform: rotate(10deg);
     opacity: 0.1;
     animation: alienBob 3s linear infinite;   
 }
-#lego-alien:hover{
+
+#lego-alien:hover {
     animation: alienVisibility 1s linear forwards;
 }
 
@@ -194,7 +250,7 @@ body{
     100% {top: 45%;}
 }
 
-@keyframes alienVisibility{
+@keyframes alienVisibility {
     0% {opacity: 0.1;}
     50% {opacity: 0.5;}
     100% {opacity: 1;}
@@ -204,7 +260,7 @@ body{
 
 /*Santa's Sleigh ------------------------------------------------------*/
 
-#santa-sleigh{
+#santa-sleigh {
     position: relative;
     justify-content: center;
     z-index: 3;
@@ -216,7 +272,7 @@ body{
     border-radius: 20%;
 }
 
-#sleigh-shadow{
+#sleigh-shadow {
     position: absolute;
     justify-content: center;
     z-index: 2;
@@ -228,7 +284,7 @@ body{
     border-radius: 20%;
 }
 
-#sleigh-rim{
+#sleigh-rim {
     position: absolute;
     justify-content: center;
     display: flex;
@@ -241,7 +297,7 @@ body{
     border-radius: 20%;
 }
 
-#reindeer{
+#reindeer {
     position: absolute;
     z-index: 0;
     bottom: 60%;
@@ -250,7 +306,7 @@ body{
 } 
 
     /*Santa -----------------------------------------------------------*/
-    #santa-legs{
+    #santa-legs {
     position: relative;
     justify-content: center;
     z-index: 4; 
@@ -261,7 +317,7 @@ body{
     transform: rotate(180deg);
     }
 
-    #santa-arms{
+    #santa-arms {
     position: relative;
     justify-content: center;
     z-index: 4;
