--- a/css/Lego-Land.css
+++ b/css/Lego-Land.css
@@ -52,7 +52,7 @@ body{
 
 /*Styling for castle*/
 .castleContainer{
-    position: absolute;
+    position: relative;
     z-index: 2;
     display: flex;
     justify-content: center;
@@ -101,6 +101,7 @@ body{
 
 /*Styling for castle door*/
 .doorContainer{
+    position: relative;
     display: flex;
     justify-content: center;
     position: absolute;
@@ -116,10 +117,30 @@ body{
     transform: scaleX(-1);
 }
 
+/*Merry Christmas speechbubble styling*/
+.merryXmas{
+    position: absolute;
+    height: 20vh;
+    top: -50%;
+    left: 50%;
+    z-index: 4;
+    opacity: 0;
+    transition: all;
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+    transition-duration: .6s;   
+}
+
+/*Merry Christmas speechbubble animation*/
+.doorContainer:hover > .merryXmas{
+    opacity: 1;
+}
+
+
 /*Styling for trees*/
 .tree{
     position: absolute;
-    z-index: 2;
+    z-index: 3;
 }
 
 #tree1{
@@ -238,7 +259,7 @@ body{
 .present{
     position: absolute;
     height: 10vh;
-    z-index: 99;
+    z-index: 0;
     animation-play-state: paused;
     animation-duration: 1s;
     animation-iteration-count: 1;
@@ -263,10 +284,13 @@ body{
     position: absolute;
     height: 10vh;
     width: 10vw;
-    background-color: rgba(236, 236, 236);
+    background-color: rgb(226, 226, 226);
     z-index: 99;
-    cursor: pointer;    
+    cursor: pointer;
+    border-radius: 100%;
+    text-align: center; 
 }
+
 
 /*Animation for present hover: Presents showing*/
 .presentShowBtn:hover > #present1{ 
@@ -296,15 +320,15 @@ body{
 @keyframes present2Animation{
     0%{
         left: 390%;
-        top: 740%;
+        top: 710%;
     }
     20%{
         opacity: 1;
     }
     100%{
         opacity: 1;
-        left: 350%;
-        top: 800%;
+        left: 340%;
+        top: 770%;
     }
 }
 @keyframes present3Animation{
@@ -313,11 +337,14 @@ body{
         top: 740%;
     }
     20%{
+        opacity: .5;
+    }
+    40%{
         opacity: 1;
     }
     100%{
         opacity: 1;
         left: 380%;
-        top: 800%;
+        top: 890%;
     }
 }
