--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -291,7 +291,7 @@
     top: 10%;
     left: 35%;
     transform: scale(0.8);
-    
+
 }
 
 @keyframes cloudMovement1{
@@ -742,7 +742,8 @@
 
 @keyframes snowflake3{
     0%{left: 15%;
-        top: 18%;}
+        top: 18%;
+        transform: scale(0.9);}
     90%{opacity: 1;}    
     100%{left: 15%;
         top: 73%;
@@ -752,7 +753,8 @@
 
 @keyframes snowflake4{
     0%{left: 20%;
-        top: 24%;}
+        top: 24%;
+        transform: scale(1.1)}
     90%{opacity: 1;}    
     100%{left: 20%;
         top: 79%;
@@ -762,7 +764,8 @@
 
 @keyframes snowflake5{
     0%{left: 25%;
-        top: 20%;}
+        top: 20%;
+        transform: scale(0.8)}
     90%{opacity: 1;}    
     100%{left: 25%;
         top: 75%;
@@ -792,7 +795,8 @@
 
 @keyframes snowflake8{
     0%{left: 37%;
-        top: 18%;}
+        top: 18%;
+        transform: scale(1.1)}
     90%{opacity: 1;}    
     100%{left: 41%;
         top: 73%;
@@ -812,7 +816,8 @@
 
 @keyframes snowflake10{
     0%{left: 51%;
-        top: 17%;}
+        top: 17%;
+        transform: scale(0.8)}
     90%{opacity: 1;}    
     100%{left: 51%;
         top: 67%;
@@ -822,7 +827,8 @@
 
 @keyframes snowflake11{
     0%{left: 56%;
-        top: 22%;}
+        top: 22%;
+        transform: scale(1.2)}
     90%{opacity: 1;}    
     100%{left: 56%;
         top: 77%;
