--- a/css/Startside.css
+++ b/css/Startside.css
@@ -1,4 +1,5 @@
 body{
+    overflow: hidden;
 }
 /*frame*/
 /*---------------------------------------------------------------------------------------*/
@@ -10,7 +11,7 @@ body{
 }
 
 .normalFrame {
-    display: block;
+    display: none;
 }
 
 .legoFrame {
@@ -22,8 +23,7 @@ body{
     /*-------------------------------------------*/
 
     .moon {
-        width: 10vw;
-
+        height: 15vh;
         position: absolute;
         right: 5%;
         top: 0;
