--- a/css/Globe.css
+++ b/css/Globe.css
@@ -179,13 +179,7 @@ body {
     }
 }
 
-#space-video{
-    position: absolute;
-    z-index: 4;
-    top: 50%;
-    left: 50%;
-}
-/*#its-all-lego {
+#its-all-lego {
     z-index: 4;
     width: 15vw;
     top: 67%;
