--- a/css/Globe.css
+++ b/css/Globe.css
@@ -203,7 +203,7 @@ body {
     100% {
         top: 67%;
     } 
-}*/
+}
 /*---------------------------------------------------------------------*/
 
 /*Extraterrestrial ----------------------------------------------------*/
@@ -212,7 +212,7 @@ body {
 }
 
 #lego-ufo {
-    z-index: 5;
+    z-index: 4;
     width: 10vw;
     top: 40%;
     left: 10%;
@@ -250,7 +250,7 @@ body {
 }
 
 #lego-alien {
-    z-index: 5;
+    z-index: 4;
     width: 3vw;
     top: 45%;
     left: 22%;
