--- a/css/Startside.css
+++ b/css/Startside.css
@@ -38,14 +38,18 @@ body{
 
         z-index: 3;
 
-        animation: moonBob 20s linear;}
+        animation: moonBob 1s linear infinite;}
 
     #relMoon {
         opacity: 1;
+        animation: getGround 10s  forwards linear;
+
     }
 
     #legoMoon {
         opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+
     }
 
             /*Animations*/
@@ -137,6 +141,17 @@ body{
 
         z-index: 5;
     }
+
+
+    #legoBigCenterTree{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
+    #relBigCenterTree{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+
     .road {
         height: 55vh;
 
@@ -248,7 +263,65 @@ body{
         top: 40%;
     }
 
+    #legoTree1{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
+    #legoTree2{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
+    #legoTree3{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
+    #legoTree4{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
+    #legoTree5{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
+    #legoTree6{
+        opacity: 0;
+        animation: getGround 10s reverse forwards linear;
+    }
 
+    #relTree1{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+    #relTree2{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+    #relTree3{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+    #relTree4{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+    #relTree5{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+    #relTree6{
+        opacity: 1;
+        animation: getGround 10s forwards linear;
+    }
+
+
+
+
+
+
+
+
+
+    
     #sleigh {
         position: absolute;
         height: 30vh;
