--- a/css/Startside.css
+++ b/css/Startside.css
@@ -38,17 +38,16 @@ body{
 
         z-index: 3;
 
-        animation: moonBob 1s linear infinite;}
+        animation: legoMoonSpin 10s forwards linear;}
 
     #relMoon {
         opacity: 1;
-        animation: getGround 10s  forwards linear;
+        animation: moonSpin 10s  forwards linear;
 
     }
 
     #legoMoon {
         opacity: 0;
-        animation: getGround 10s reverse forwards linear;
 
     }
 
@@ -58,6 +57,27 @@ body{
                 0% {top: 0;}
                 50%{ top: 1%;}
                 100% {top: 0;}
+            }
+
+            @keyframes moonSpin {
+                0%{
+                    opacity: 1;
+                }
+                100%{
+                    transform: rotate(1800deg);
+                    opacity: 0;
+                }
+                
+            }
+            @keyframes legoMoonSpin {
+                0%{
+                    opacity: 0;
+                }
+                100%{
+                    transform: rotate(1800deg);
+                    opacity: 1;
+                }
+                
             }
 
             @keyframes santaRide {
@@ -144,12 +164,27 @@ body{
 
 
     #legoBigCenterTree{
-        opacity: 0;
-        animation: getGround 10s reverse forwards linear;
+        opacity: 1;
     }
     #relBigCenterTree{
         opacity: 1;
-        animation: getGround 10s forwards linear;
+        animation: liftOf 10s infinite linear;
+    }
+
+
+    @keyframes liftOf {
+        0% {left: 34%;
+            top: 0%}
+        5%{left: 35%;}
+        10%{left: 33%;}
+        15%{left: 35%;}
+        20%{left: 33%;}
+        25%{left: 35%;}
+        30%{left: 33%;}       
+        35%{left: 35%;}
+        40%{left: 33%;}
+        45%{left: 34%;}
+        50%{ top: -100%}  
     }
 
     .road {
