--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -23,13 +23,13 @@ body{
 	position: absolute;
 }
 #road {
-z-index: 3;
-display: flex;
-justify-content: center;
-top: 64.7%;
-left: -20%;
-width:150vw;
-height: 40vh;
+	z-index: 3;
+	display: flex;
+	justify-content: center;
+	top: 64.7%;
+	left: -20%;
+	width:150vw;
+	height: 40vh;
 }
 #house1 {
 	z-index: 4;
@@ -133,6 +133,7 @@ height: 40vh;
 }
 
 #legoTaxi {
+	position: absolute;
 	z-index: 5;
 	right: -10%;
 	bottom: 19%;
@@ -144,10 +145,15 @@ height: 40vh;
 }
 
 @keyframes taxi {
-	0% {right: -10%; bottom: 19%;}
-	45%{rotate: 5deg;}
-	50%{rotate: 360deg;}
-	100%{right: 70%; bottom: 19%; rotate: 50deg;}
+	0% {
+		right: -10%;
+		bottom: 19%;
+	}
+
+	100% {
+		right: 70%;
+		bottom: 19%;
+	}
 }
 
 #legoManArmless {
@@ -156,6 +162,18 @@ height: 40vh;
 	height: 20vh;
 	top: 50%;
 	left: 33%;
+	opacity: 0;
+	animation: legoManStop 0s linear forwards;
+	animation-delay: 6s;
+}
+@keyframes legoManStop{
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 
 
@@ -165,20 +183,35 @@ height: 40vh;
 	height: 13vh;
 	top: 54%;
 	left: 39.1%;
-	animation: armimation 10s linear infinite;
-	animation-delay: 6s;
-	animation-play-state: running;
+	opacity: 0;
+	animation: armimation 1s linear 6s forwards
+
+}
+
+
+@keyframes armpacity{
+	0%{
+		opacity: 0;
+	}
+
+	100%{
+		opacity: 1;
+	}
+
 }
 
 @keyframes armimation {
+	0%{
+		opacity: 1;
+	}
 	25% {
 		left: 38.6%;
-		top: 54.6%;
+		top: 54.7%;
 	}
 
 	50% {
-		left: 37.6%;
-		top: 54.5%;
+		left: 37.7%;
+		top: 54.3%;
 	}
 
 	75% {
@@ -187,6 +220,7 @@ height: 40vh;
 	}
 
 	100% {
+		opacity: 1;
 		transform: rotate(150deg);
 		left: 37.2%;
 		top: 52%;
