--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -1,10 +1,17 @@
 #container {
-    background-color: rgb(10, 0, 100);
+    background-color: rgb(20, 155, 189); /*20, 155, 189*/
     z-index: 1;
     height: 100vh;
     width: 100vw;
     position: absolute;
     overflow:hidden;
+}
+
+#clouds{
+    z-index: 4;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
 }
 
 #snowBackground{
