--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -132,16 +132,14 @@ body{
 	100%{opacity: 79%;}
 }
 
-#legoTaxi {
+.legoTaxi {
 	position: absolute;
 	z-index: 5;
 	right: -10%;
 	bottom: 19%;
 	height: 15vh;
-	width: 37vh;
-	display: flex;
-	justify-content: center;
-	animation: taxi 3s linear forwards;
+	width: 20vw;
+	animation: taxi 6s linear forwards;
 }
 
 @keyframes taxi {
@@ -151,12 +149,13 @@ body{
 	}
 
 	100% {
-		right: 70%;
+		right: 50%;
 		bottom: 19%;
 	}
 }
 
 #legoManArmless {
+	position: absolute;
 	z-index: 4;
 	width: 15vw;
 	height: 20vh;
@@ -178,25 +177,14 @@ body{
 
 
 #legoArm {
+	position: absolute;
 	z-index: 4;
 	width: 3vw;
 	height: 13vh;
 	top: 54%;
 	left: 39.1%;
-	opacity: 0;
-	animation: armimation 1s linear 6s forwards
-
-}
-
-
-@keyframes armpacity{
-	0%{
-		opacity: 0;
-	}
-
-	100%{
-		opacity: 1;
-	}
+	opacity: 1;
+	animation: armimation 0.5s linear 2s forwards
 
 }
 
@@ -205,21 +193,29 @@ body{
 		opacity: 1;
 	}
 	25% {
+		width: 3vw;
+		height: 13vh;
 		left: 38.6%;
 		top: 54.7%;
 	}
 
 	50% {
+		width: 3vw;
+		height: 13vh;
 		left: 37.7%;
 		top: 54.3%;
 	}
 
 	75% {
+		width: 3vw;
+		height: 13vh;
 		left: 37.3%;
 		top: 53.1%;
 	}
 
 	100% {
+		width: 3vw;
+		height: 13vh;
 		opacity: 1;
 		transform: rotate(150deg);
 		left: 37.2%;
