--- a/css/Globe.css
+++ b/css/Globe.css
@@ -310,7 +310,7 @@ body {
 #spaceCow {
     z-index: 5;
     top: -10%;
-    left: -10%;
+    left: -1%;
     width: 5vw;
     animation: flyingSpaceCow 3s linear forwards;
 }
@@ -336,6 +336,27 @@ body {
         opacity: 0;
     }
     
+}
+
+#mushroomCloud {
+    position: absolute;
+    z-index: 4;
+    top: 35%;
+    left: 39%; 
+    width: 7vw;
+    opacity: 0;
+    animation: mushroomCloudAnimation 2s linear forwards;
+    animation-delay: 2.7s;
+}
+
+@keyframes mushroomCloudAnimation {
+    0% {
+       
+    }
+    100% {
+        top: 30%;
+        opacity: 1;
+    }
 }
 /*---------------------------------------------------------------------*/
 
@@ -381,7 +402,7 @@ body {
     position: absolute;
     z-index: 0;
     bottom: 60%;
-    left: 20%;
+    left: 18%;
     width: 20vw;
 } 
 
@@ -408,6 +429,5 @@ body {
     height: 150%;
     }
     /*-----------------------------------------------------------------*/
-
 /*---------------------------------------------------------------------*/
 
