--- a/css/Startside.css
+++ b/css/Startside.css
@@ -90,15 +90,20 @@ body{
                     right: 17%;
                     top: 10%;
                     z-index: 2;
+                    transform: rotatey(0deg);
+                    transform: rotateZ(15deg)
                 }
                 30%{
-                    transform: rotatey(180deg)
+                    transform: rotatey(180deg);
                 }
                 50%{
                     right: -2%;
                     top: 3%;
+                    transform: rotatey(180deg);
+                }
+                55%{
+                    transform: rotate(0deg);
                     z-index: 4;
-                    transform: rotatey(0deg);
                 }
                 100%{
                     right: 100%;
@@ -352,12 +357,18 @@ body{
     }
 
 
-
-
-
-
-
-
+@keyframes three1 {
+    
+}
+@keyframes three2 {
+    
+}
+@keyframes three3 {
+    
+}
+@keyframes three4 {
+    
+}
 
     
     #sleigh {
