--- a/css/North-Pole.css
+++ b/css/North-Pole.css
@@ -254,6 +254,28 @@
     
 }
 
+/* Linker */
+
+.links{
+    position: absolute;
+    z-index: 3;
+    color: black;
+    text-decoration: none;
+}
+
+#spaceLink{
+    top: 53.5%;
+    left: 9.5%;
+    z-index: 3;
+    transform: rotate(-22deg);
+}
+
+#legoCityLink{
+    top: 57%;
+    left: 7.5%;
+    z-index: 3;    
+}
+
 /* Posisjonering av hus */ 
 
 #house2{
